--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#one" class="active">Things About Me</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">Things I Have Created</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#four">Thing to Contact Me</a></li>
 					</ul>
 				</nav>
 				<footer>
