changed filler text & fa icons.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="active">Things About Me</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">Things I Have Created</a></li>
-						<li><a href="#four">Thing to Contact Me</a></li>
+						<li><a href="#four">Things to Contact Me</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -58,7 +58,7 @@
 										Data Analyst + Technologist<br />
 										<a href="https://twitter.com/techieEliot">@techieEliot</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I'm a self guided learner.</p>
 								</div>
 							</section>
 
@@ -68,12 +68,12 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Develop websites</li>
-										<li class="fa-cubes">Analyze datasets</li>
-										<li class="fa-book">Teach stuff</li>
+										<li class="fa-cubes">Solve problems</li>
+										<li class="fa-code">Build websites</li>
+										<li class="fa-users">Lead people</li>
+										<li class="fa-book">Teach learners</li>
 										<li class="fa-coffee">Brew coffee</li>
 										<li class="fa-bolt">Learn quickly</li>
-										<li class="fa-users">Build community</li>
 									</ul>
 								</div>
 							</section>
@@ -82,27 +82,29 @@
 							<section id="three">
 								<div class="container">
 									<h3>Things I Have Created</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>These are a list of my projects
+									</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Javascript & React Sites</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>I produced the following sites.
+												</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Pure HTML & CSS Sites</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
+												<p>During the months of December through March I learned HTML and CSS.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>I have created sites using content management systems.</p>
 											</div>
 										</article>
 									</div>
@@ -113,7 +115,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Thing to Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Please contact me using this form.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
