Changed the wording.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Here's a list of things I can do:</p>
 									<ul class="feature-icons">
 										<li class="fa-cubes">Solve problems</li>
 										<li class="fa-code">Build websites</li>
-										<li class="fa-users">Lead people</li>
+										<li class="fa-users">Facilitate teams</li>
 										<li class="fa-book">Teach learners</li>
 										<li class="fa-coffee">Brew coffee</li>
 										<li class="fa-bolt">Learn quickly</li>
@@ -82,14 +82,14 @@
 							<section id="three">
 								<div class="container">
 									<h3>Things I Have Created</h3>
-									<p>These are a list of my projects
+									<p>These are my projects.
 									</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Javascript & React Sites</h4>
-												<p>I produced the following sites.
+												<p>Since the beginning of April 2019, I have created sites.
 												</p>
 											</div>
 										</article>
@@ -97,14 +97,14 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
-												<p>During the months of December through March I learned HTML and CSS.</p>
+												<p>During the months of December 2018 through March 2019, I learned HTML and CSS.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
-												<p>I have created sites using content management systems.</p>
+												<p>In December 2018, I created sites using content management systems.</p>
 											</div>
 										</article>
 									</div>
@@ -114,7 +114,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Thing to Contact Me</h3>
+									<h3>Things to Contact Me</h3>
 									<p>Please contact me using this form.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
