added action to formspree contact form

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<div class="container">
 									<h3>Things to Contact Me</h3>
 									<p>Please contact me using this form.</p>
-									<form method="post" action="#">
+									<form method="post" action="https://formspree.io/eliot587@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
