--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
 												<h4>Javascript & React Sites</h4>
 												<p>Since the beginning of April 2019, I have created sites.
 												</p>
+												<ul class="feature-icons">
+													<li class="fa-code"><a href="https://techieeliot.github.io/magnolinaJS/">MagnoliaJS Workshop: Web Compenents</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/react-w3develops/">w3Develops React Class Page</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a></li>
+
+												</ul>
+												.
 											</div>
 										</article>
 										<article>
@@ -98,6 +105,11 @@
 											<div class="inner">
 												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
 												<p>During the months of December 2018 through March 2019, I learned HTML and CSS.</p>
+												<ul class="feature-icons">
+													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/first-html-project/">w3Develops First HTML Project Page</a></li>
+													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/css-mulit-color-float-eliot/">w3Develops CSS Class Project Page</a></li>
+
+												</ul>
 											</div>
 										</article>
 										<article>
@@ -105,7 +117,11 @@
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
-											</div>
+												<ul class="feature-icons">
+													<li class="fa-code"><a href="https://weedwarriorsjackson.com/">WP - Weed Warriors Jackson</a></li>
+													<li class="fa-code"><a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a></li>
+
+												</ul>											</div>
 										</article>
 									</div>
 								</div>
