--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="active">Things About Me</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">Things I Have Created</a></li>
-						<li><a href="#four">Things to Contact Me</a></li>
+						<li><a href="#four">Contact Me</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -130,7 +130,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Things to Contact Me</h3>
+									<h3>Contact Me</h3>
 									<p>Please contact me using this form.</p>
 									<form method="post" action="https://formspree.io/eliot587@gmail.com">
 										<div class="row gtr-uniform">
