fixed broken links

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 												<p>Since the beginning of April 2019, I have created sites.
 												</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://techieeliot.github.io/magnolinaJS/">MagnoliaJS Workshop: Web Compenents</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/magnoliaJS/">MagnoliaJS Workshop: Web Compenents</a></li>
 													<li class="fa-code"><a href="https://techieeliot.github.io/react-w3develops/">w3Develops React Class Page</a></li>
-													<li class="fa-code"><a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/w3develops-JS/">w3Develops JavaScript Class Page</a></li>
 
 												</ul>
 												.
