added gcc-codes page and added more content

--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
-												<p>During the months of December 2018 through March 2019, I learned HTML and CSS.</p>
+												<p>During the months of December 2018 through March 2019, I learned HTML and CSS. These are some of the first sites that I made. You can see that I've come a long way.</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/first-html-project/">w3Develops First HTML Project Page</a></li>
+													https://codesandbox.io/s/github/techi…
+													<li class="fa-code"><a href="https://codesandbox.io/s/github/techieeliot/gcc-codes">w3Develops CSS Class Project Page</a></li>
 													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/css-mulit-color-float-eliot/">w3Develops CSS Class Project Page</a></li>
+													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/first-html-project/">w3Develops First HTML Project Page</a></li>
 
 												</ul>
 											</div>
@@ -116,7 +118,7 @@
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
-												<p>In December 2018, I created sites using content management systems.</p>
+												<p>In December 2018, I created sites using content management systems. These were my first ventures into web developement.</p>
 												<ul class="feature-icons">
 													<li class="fa-code"><a href="https://weedwarriorsjackson.com/">WP - Weed Warriors Jackson</a></li>
 													<li class="fa-code"><a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a></li>
