removed link and added inner text for gcc-codes

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
 												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
 												<p>During the months of December 2018 through March 2019, I learned HTML and CSS. These are some of the first sites that I made. You can see that I've come a long way.</p>
 												<ul class="feature-icons">
-													https://codesandbox.io/s/github/techi…
-													<li class="fa-code"><a href="https://codesandbox.io/s/github/techieeliot/gcc-codes">w3Develops CSS Class Project Page</a></li>
+													<li class="fa-code"><a href="https://codesandbox.io/s/github/techieeliot/gcc-codes">GCC-Codes HTML Class Project Page</a></li>
 													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/css-mulit-color-float-eliot/">w3Develops CSS Class Project Page</a></li>
 													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/first-html-project/">w3Develops First HTML Project Page</a></li>
 
