added new projects in react + css flex/grid/jquery

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										Data Analyst + Technologist<br />
 										<a href="https://twitter.com/techieEliot">@techieEliot</a>.</p>
 									</header>
-									<p>I'm a self guided learner.</p>
+									<p>I'm a self-guided learner with a passion for sharing my learning through teaching.</p>
 								</div>
 							</section>
 
@@ -92,7 +92,10 @@
 												<p>Since the beginning of April 2019, I have created sites.
 												</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://techieeliot.github.io/magnolinaJS/">MagnoliaJS Workshop: Web Compenents</a></li>
+													<li class="fa-code"><a href="https://w3develops-university.github.io/w3DevelopsReactMovieWebApp.github.io/">Movie Database App</a></li>
+													<li class="fa-code"><a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote Vote Tally App (Full Stack Open React)</a></li>
+													<li class="fa-code"><a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Vote Tally Feedback Application (Full Stack Open React)</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/magnoliaJS/">MagnoliaJS Workshop: Web Components</a></li>
 													<li class="fa-code"><a href="https://techieeliot.github.io/react-w3develops/">w3Develops React Class Page</a></li>
 													<li class="fa-code"><a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a></li>
 
@@ -103,11 +106,11 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Pure HTML & CSS and Bootstrap Sites</h4>
+												<h4>Pure HTML, CSS, Bootstrap, and jQuery Sites</h4>
 												<p>During the months of December 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/first-html-project/">w3Develops First HTML Project Page</a></li>
-													<li class="fa-code"><a href="https://w3develops-osd-january.github.io/css-mulit-color-float-eliot/">w3Develops CSS Class Project Page</a></li>
+													<li class="fa-code"><a href="https://techieeliot.github.io/gcc-web-design-co/">Deep South Devs (Company Page with jQuery Slick Slider)</a></li>
+													<li class="fa-code"><a href="https://freecodecampjxn.github.io/flexbox-example/">freeCodeCamp Jackson, MS Flexbox Examples</a></li>
 
 												</ul>
 											</div>
