refactor: alterations to the things I can do section update - rewrote bullets to include tech, tools, and libraries update - font awesome icons update - cdn connection link, license, and readme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/e661112737.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -68,12 +69,18 @@
 									<h3>Things I Can Do</h3>
 									<p>Here's a list of things I can do:</p>
 									<ul class="feature-icons">
-										<li class="fa-cubes">Solve problems</li>
-										<li class="fa-code">Build websites</li>
-										<li class="fa-users">Facilitate teams</li>
-										<li class="fa-book">Teach learners</li>
-										<li class="fa-coffee">Brew coffee</li>
-										<li class="fa-bolt">Learn quickly</li>
+										<li class="fab fa-js-square">JavaScript</li>
+										<li class="fas fa-database">SQL</li>
+										<li class="fab fa-envira">MongoDB</li>
+										<li class="fas fa-cog">Express JS</li>
+										<li class="fab fa-node-js">Node JS</li>
+										<li class="fa-coffee">jQuery</li>
+										<li class="fab fa-git-alt">Git</li>
+										<li class="fab fa-python">Python 3</li>
+										<li class="fab fa-wordpress">WordPress</li>
+										<li class="fab fa-css3-alt">CSS3</li>
+										<li class="fab fa-sass">SASS</li>
+										<li class="fab fa-html5">HTML5</li>
 									</ul>
 								</div>
 							</section>
