--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="My headshot" /></span>
 					<h1 id="logo"><a href="#">Eliot Sanford</a></h1>
-					<p>Web Developer<br />
-					Data Analyst + Technologist</p>
+					<p>Web Developer + Teacher</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -55,15 +54,20 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p>Web Developer<br />
-										Data Analyst + Technologist<br />
-										<a href="https://twitter.com/techieEliot">@techieEliot</a>.</p>
+										<p>Web Developer + Teacher</p>
 									</header>
-									<p>I'm a self-guided learner with a passion for sharing my learning through teaching.</p>
+									<section>
+										<a class="btn btn-twitter btn-lg" href="https://twitter.com/techieEliot" role="button" target="_blank">
+											<span class="icon fa-twitter"></span>
+											@techieEliot
+										</a>
+										<p class="bio-section"><strong>Welcome to my portfolio page!</strong><br>I'm excited to share with you some of my story and what I've created. I'm currently a full-time high school tech teacher making a career switch as a web developer. For the past two years, I've been learning on my own including freeCodeCamp projects, then at the end of last year I joined a bootcamp in the evenings. Please browse below and contact me via <a href="#four">the form at the bottom of this page</a>, <a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or <a href="mailto:eliot587@gmail.com">my email</a>.</p> 
+	
+									</section>
 								</div>
 							</section>
-
-						<!-- Two -->
+							
+							<!-- Two -->
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
@@ -84,8 +88,8 @@
 									</ul>
 								</div>
 							</section>
-
-						<!-- Three -->
+							
+							<!-- Three -->
 							<section id="three">
 								<div class="container">
 									<h3>Things I Have Created</h3>
@@ -96,6 +100,9 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Javascript & React Sites</h4>
+												<!-- <p>I enjoy giving back through learning and teaching others. As an intern for w3Develops.org in December 2018, I facilitated remote learning and organized learning groups. Since March 2019, I haved organized a meetup called freeCodeCamp Jackson, MS and presented chats at each meeting for the past year. In June 2019, I volunteered at a program called Upward Bound to teach HTML and CSS to minority youth at a local community college. I teach tech to 10th graders each day with a focus on the basics of front-end.</p>
+												`
+												<p>In December 2019, I joined the Mississippi Coding Academy as a Junior Developer in the night program for back-end development where we have learned with MySQL, Node.JS, Express.JS, and React.JS. My night program and full-time teaching role end in May, so I'm beginning the process of applying for various roles. </p> -->
 												<p>Since the beginning of April 2019, I have created sites.
 												</p>
 												<ul class="feature-icons">
@@ -496,7 +503,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; 2019. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
