update: index.html look and content fixes #8 - icon test is consistent - clean-up page organization in various places - added some newer projects to the site - changed one of three pictures - inserted a note regarding npm commans for projects

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="My headshot" /></span>
-					<h1 id="logo"><a href="#">Eliot Sanford</a></h1>
+					<h1 id="logo">
+						<a href="#">Eliot Sanford</a></h1>
 					<p>Web Developer + Teacher</p>
 				</header>
 				<nav id="nav">
@@ -73,18 +74,18 @@
 									<h3>Things I Can Do</h3>
 									<p>Here's a list of things I can do:</p>
 									<ul class="feature-icons">
-										<li class="fab fa-js-square">JavaScript</li>
+										<li class="fas fa-js-square">JavaScript</li>
 										<li class="fas fa-database">SQL</li>
-										<li class="fab fa-envira">MongoDB</li>
+										<li class="fas fa-envira">MongoDB</li>
 										<li class="fas fa-cog">Express JS</li>
-										<li class="fab fa-node-js">Node JS</li>
-										<li class="fa-coffee">jQuery</li>
-										<li class="fab fa-git-alt">Git</li>
-										<li class="fab fa-python">Python 3</li>
-										<li class="fab fa-wordpress">WordPress</li>
-										<li class="fab fa-css3-alt">CSS3</li>
-										<li class="fab fa-sass">SASS</li>
-										<li class="fab fa-html5">HTML5</li>
+										<li class="fas fa-node-js">Node JS</li>
+										<li class="fas fa-coffee">jQuery</li>
+										<li class="fas fa-git-alt">Git</li>
+										<li class="fas fa-python">Python 3</li>
+										<li class="fas fa-wordpress">WordPress</li>
+										<li class="fas fa-css3-alt">CSS3</li>
+										<li class="fas fa-sass">SASS</li>
+										<li class="fas fa-html5">HTML5</li>
 									</ul>
 								</div>
 							</section>
@@ -99,46 +100,69 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Javascript & React Sites</h4>
-												<!-- <p>I enjoy giving back through learning and teaching others. As an intern for w3Develops.org in December 2018, I facilitated remote learning and organized learning groups. Since March 2019, I haved organized a meetup called freeCodeCamp Jackson, MS and presented chats at each meeting for the past year. In June 2019, I volunteered at a program called Upward Bound to teach HTML and CSS to minority youth at a local community college. I teach tech to 10th graders each day with a focus on the basics of front-end.</p>
-												`
-												<p>In December 2019, I joined the Mississippi Coding Academy as a Junior Developer in the night program for back-end development where we have learned with MySQL, Node.JS, Express.JS, and React.JS. My night program and full-time teaching role end in May, so I'm beginning the process of applying for various roles. </p> -->
-												<p>Since the beginning of April 2019, I have created sites.
+												<h4>Javascript, SQL, Node JS & React JS Sites</h4>
+												<p>Since the beginning of April 2019, I have created sites with these technologies.
 												</p>
+												<p>Note: you'll need to follow the npm commands for certain projects</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://github.com/w3develops-university/w3DevelopsReactMovieWebApp.github.io/tree/master/React%20RMDB%20-%20Starter%20files_rev7/React%20RMDB%20-%20Start%20Here">Movie Database App</a></li>
-													<li class="fa-code"><a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote Vote Tally App (Full Stack Open React)</a></li>
-													<li class="fa-code"><a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Vote Tally Feedback Application (Full Stack Open React)</a></li>
-													<li class="fa-code"><a href="https://techieeliot.github.io/magnoliaJS/">MagnoliaJS Workshop: Web Components</a></li>
-													<li class="fa-code"><a href="https://techieeliot.github.io/react-w3develops/">w3Develops React Class Page</a></li>
-													<li class="fa-code"><a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a></li>
+													<li class="fa-code">
+														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/">React JS Image Box (2019 JavaScript for WordPress Conference)</a>
+													</li>
+													<li class="fa-code">
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/c__anecdotes__">Anecdote Vote Tally App (Full Stack Open React)</a>
+													</li>
+													<li class="fa-code">
+														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__">Vote Tally Feedback Application (Full Stack Open React)</a>
+													</li>
+													<li class="fa-code">
+														<a href="https://techieeliot.github.io/magnoliaJS/">MagnoliaJS Workshop: Web Components</a
+															></li>
+													<li class="fa-code">
+														<a href="https://github.com/techieeliot/legendary-palm-tree">SQL Project at Mississippi Coding Academy 2020</a>
+													</li>
+													<li class="fa-code">
+														<a href="https://github.com/techieeliot/msCoding/tree/master/javascript">JavaScript Learning at Mississippi Coding Academy 2020</a>
+													</li>
+													</li>
+													<li class="fa-code">
+														<a href="https://techieeliot.github.io/new-JS-study-group/">w3Develops JavaScript Class Page</a>
+													</li>
 
 												</ul>
-												.
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Pure HTML, CSS, Bootstrap, and jQuery Sites</h4>
-												<p>During the months of December 2018 through March 2019, I learned HTML and CSS.</p>
+												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
+												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://techieeliot.github.io/gcc-web-design-co/">Deep South Devs (Company Page with jQuery Slick Slider)</a></li>
-													<li class="fa-code"><a href="https://freecodecampjxn.github.io/flexbox-example/">freeCodeCamp Jackson, MS Flexbox Examples</a></li>
-
+													<li class="fa-code">
+														<a href="https://techieeliot.github.io/gcc-web-design-co/">Deep South Devs (Company Page with jQuery Slick Slider)</a></li>
+													<li class="fa-code">
+														<a href="https://github.com/techieeliot/mentors-scaling-garbanzo">Tailwind CSS Example</a>
+													<li class="fa-code">
+														<a href="https://freecodecampjxn.github.io/flexbox-example/">freeCodeCamp Jackson, MS Flexbox Examples</a>
+													</li>
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" />
+											</a>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
 												<ul class="feature-icons">
-													<li class="fa-code"><a href="https://weedwarriorsjackson.com/">WP - Weed Warriors Jackson</a></li>
-													<li class="fa-code"><a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a></li>
+													<li class="fa-code">
+														<a href="https://weedwarriorsjackson.com/">WP - Weed Warriors Jackson</a>
+													</li>
+													<li class="fa-code">
+														<a href="https://www.msparalegals.org/">Wix - Mississppi Paralegals Association</a>
+													</li>
 
-												</ul>											</div>
+												</ul>	
+											</div>
 										</article>
 									</div>
 								</div>
@@ -238,53 +262,77 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</ol>
 												<h5>Icons</h5>
 												<ul class="icons">
-													<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-													<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-													<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+													<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a
+														></li>
+													<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a
+														></li>
+													<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+													</li>
+													<li><a href="#" class="icon fa-github"><span class="label">Github</span></a
+														></li>
+													<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a
+														></li>
+													<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a
+														></li>
 												</ul>
 											</div>
 										</div>
 										<h5>Actions</h5>
 										<ul class="actions">
-											<li><a href="#" class="button primary">Default</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt">Default</a></li>
+											<li><a href="#" class="button primary">Default</a>
+											</li>
+											<li><a href="#" class="button">Default</a>
+											</li>
+											<li><a href="#" class="button alt">Default</a>
+											</li>
 										</ul>
 										<ul class="actions small">
-											<li><a href="#" class="button primary small">Small</a></li>
-											<li><a href="#" class="button small">Small</a></li>
-											<li><a href="#" class="button alt small">Small</a></li>
+											<li><a href="#" class="button primary small">Small</a>
+											</li>
+											<li><a href="#" class="button small">Small</a>
+											</li>
+											<li><a href="#" class="button alt small">Small</a>
+											</li>
 										</ul>
 										<div class="row">
 											<div class="col-3 col-6-medium col-12-xsmall">
 												<ul class="actions stacked">
-													<li><a href="#" class="button primary">Default</a></li>
-													<li><a href="#" class="button">Default</a></li>
-													<li><a href="#" class="button alt">Default</a></li>
+													<li><a href="#" class="button primary">Default</a>
+													</li>
+													<li><a href="#" class="button">Default</a>
+													</li>
+													<li><a href="#" class="button alt">Default</a>
+													</li>
 												</ul>
 											</div>
 											<div class="col-3 col-6 col-12-xsmall">
 												<ul class="actions stacked">
-													<li><a href="#" class="button primary small">Small</a></li>
-													<li><a href="#" class="button small">Small</a></li>
-													<li><a href="#" class="button alt small">Small</a></li>
+													<li><a href="#" class="button primary small">Small</a>
+													</li>
+													<li><a href="#" class="button small">Small</a>
+													</li>
+													<li><a href="#" class="button alt small">Small</a>
+													</li>
 												</ul>
 											</div>
 											<div class="col-3 col-6-medium col-12-xsmall">
 												<ul class="actions stacked">
-													<li><a href="#" class="button primary fit">Default</a></li>
-													<li><a href="#" class="button fit">Default</a></li>
-													<li><a href="#" class="button alt fit">Default</a></li>
+													<li><a href="#" class="button primary fit">Default</a>
+													</li>
+													<li><a href="#" class="button fit">Default</a>
+													</li>
+													<li><a href="#" class="button alt fit">Default</a>
+													</li>
 												</ul>
 											</div>
 											<div class="col-3 col-6-medium col-12-xsmall">
 												<ul class="actions stacked">
-													<li><a href="#" class="button primary small fit">Small</a></li>
-													<li><a href="#" class="button small fit">Small</a></li>
-													<li><a href="#" class="button alt small fit">Small</a></li>
+													<li><a href="#" class="button primary small fit">Small</a
+														></li>
+													<li><a href="#" class="button small fit">Small</a>
+													</li>
+													<li><a href="#" class="button alt small fit">Small</a>
+													</li>
 												</ul>
 											</div>
 										</div>
@@ -388,29 +436,44 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<section>
 										<h4>Buttons</h4>
 										<ul class="actions">
-											<li><a href="#" class="button primary">Primary</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt">Alternate</a></li>
+											<li><a href="#" class="button primary">Primary</a>
+											</li>
+											<li><a href="#" class="button">Default</a>
+											</li>
+											<li><a href="#" class="button alt">Alternate</a>
+											</li>
 										</ul>
 										<ul class="actions">
-											<li><a href="#" class="button primary large">Large</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt small">Small</a></li>
+											<li><a href="#" class="button primary large">Large</a>
+											</li>
+											<li><a href="#" class="button">Default</a>
+											</li>
+											<li><a href="#" class="button alt small">Small</a>
+											</li>
 										</ul>
 										<ul class="actions fit">
-											<li><a href="#" class="button primary fit">Fit</a></li>
-											<li><a href="#" class="button fit">Fit</a></li>
-											<li><a href="#" class="button alt fit">Fit</a></li>
+											<li><a href="#" class="button primary fit">Fit</a>
+											</li>
+											<li><a href="#" class="button fit">Fit</a>
+											</li>
+											<li><a href="#" class="button alt fit">Fit</a>
+											</li>
 										</ul>
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">Fit + Small</a></li>
-											<li><a href="#" class="button fit small">Fit + Small</a></li>
-											<li><a href="#" class="button alt fit small">Fit + Small</a></li>
+											<li><a href="#" class="button primary fit small">Fit + Small</a>
+											</li>
+											<li><a href="#" class="button fit small">Fit + Small</a>
+											</li>
+											<li><a href="#" class="button alt fit small">Fit + Small</a>
+											</li>
 										</ul>
 										<ul class="actions">
-											<li><a href="#" class="button primary icon fa-download">Icon</a></li>
-											<li><a href="#" class="button icon fa-download">Icon</a></li>
-											<li><a href="#" class="button alt icon fa-check">Icon</a></li>
+											<li><a href="#" class="button primary icon fa-download">Icon</a>
+											</li>
+											<li><a href="#" class="button icon fa-download">Icon</a>
+											</li>
+											<li><a href="#" class="button alt icon fa-check">Icon</a>
+											</li>
 										</ul>
 										<ul class="actions">
 											<li><span class="button primary disabled">Primary</span></li>
@@ -503,7 +566,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>
+								</li>
 							</ul>
 						</div>
 					</section>
