update: icons at the bottom of the page closes #15

--- a/index.html
+++ b/index.html
@@ -565,6 +565,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
+							<ul class="icons">
+								<li><a href="https://twitter.com/techieEliot" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:eliot587@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 							<ul class="copyright">
 								<li>&copy; 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>
 								</li>
